# magicmethyl

./: README.md  magicmethyl.ipynb  playground.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: tests.yml
magicmethyl/: magicmethyl.py  methylator.py  utils.py
tests/: test_magicmethyl.py
