[metadata]
name = magicmethyl
version = 0.0.1
description = Finds conformationally interesting methylations for small molecules
long_description = file: README.md
author = Sam Mun
license_file = LICENSE
platforms = linux
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = magicmethyl
# install_requires =
python_requires = >=3.7

[options.extras_require]
testing = 
    flake8==4.0.1
    tox==3.24.5
    pytest==7.1.0
    mypy==0.941

[options.package_data]
    magicmethyl = py.typed

[flake8]
    max-line-length = 80